[tool.poetry]
name = "alchemy"
version = "0.1.0"
description = ""
authors = ["cinuor"]

[tool.poetry.dependencies]
python = "^3.8"
backtrader = "^1.9.76"
python-binance = "^1.0.15"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
